--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+aiven-client==4.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 confluent-kafka==2.8.0
 Faker==35.2.0
+idna==3.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+requests==2.32.3
+requests-toolbelt==1.0.0
 six==1.17.0
 typing_extensions==4.12.2
+urllib3==2.3.0
