--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.1
 confluent-kafka==2.8.0
 Faker==35.2.0
 idna==3.10
+psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 requests==2.32.3
