--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,16 @@ charset-normalizer==3.4.1
 confluent-kafka==2.8.0
 Faker==35.2.0
 idna==3.10
+numpy==2.2.2
+pandas==2.2.3
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.1
 requests==2.32.3
 requests-toolbelt==1.0.0
 six==1.17.0
+tabulate==0.9.0
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
