--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ aiven-client==4.5.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 confluent-kafka==2.8.0
+Events==0.5
 Faker==35.2.0
 idna==3.10
 numpy==2.2.2
+opensearch-py==2.8.0
 pandas==2.2.3
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
